# tink-rs-poc

./: Cargo.toml  README.md  build.rs
examples/: aead.rs  hybrid.rs
src/: aead.rs  aead_config.rs  aead_config_transfer.rs  aead_key_templates.rs  aead_key_templates_transfer.rs  aead_transfer.rs  cleartext_keyset_handle.rs  cleartext_keyset_handle_transfer.rs  configuration.rs  configuration_transfer.rs  free_functions.rs  free_functions_transfer.rs  hybrid_config.rs  hybrid_config_transfer.rs  hybrid_decrypt.rs  hybrid_decrypt_transfer.rs  hybrid_encrypt.rs  hybrid_encrypt_transfer.rs  hybrid_key_templates.rs  hybrid_key_templates_transfer.rs  json_keyset_reader.rs  json_keyset_reader_transfer.rs  key_gen_configuration.rs  key_gen_configuration_transfer.rs  key_template.rs  key_template_transfer.rs  keyset_handle.rs  keyset_handle_transfer.rs  keyset_reader.rs  keyset_reader_transfer.rs  lib.rs  tink_error.rs  wrapped_base.rs
tink-cc-wrapped/: CMakeLists.txt  README.md
tink-cc-wrapped/src/: aead.cpp  aead.h  aead_config.cpp  aead_config.h  aead_key_templates.cpp  aead_key_templates.h  cleartext_keyset_handle.cpp  cleartext_keyset_handle.h  configuration.h  free_functions.cpp  free_functions.h  hybrid_config.cpp  hybrid_config.h  hybrid_decrypt.cpp  hybrid_decrypt.h  hybrid_encrypt.cpp  hybrid_encrypt.h  hybrid_key_templates.cpp  hybrid_key_templates.h  json_keyset_reader.cpp  json_keyset_reader.h  key_gen_configuration.cpp  key_gen_configuration.h  key_template.cpp  key_template.h  keyset_handle.cpp  keyset_handle.h  keyset_reader.cpp  keyset_reader.h  wrapped_util.cpp  wrapped_util.h
